--- a/npcs/eldaren_brightfoot.yaml
+++ b/npcs/eldaren_brightfoot.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: middle aged adult
+    age: Middle Aged Adult
 
     #
     # Races (case insensitive):
@@ -261,7 +261,7 @@ npc:
     #
     # Required.
     #
-    subclass: College of Lore
+    subclass: College of Mime
 
     #
     # Class level.
@@ -461,46 +461,97 @@ npc:
   # ???Max length???
   #
   specialties:
+    saving-throws:
+    - Charisma
+    - Intelligence
+    damage-immunities:
+    - N/A
+    condition-immunities:
+    - N/A
+    resistances:
+    - Frightened
     skills:
-    - Halfling Abilities:
-      - Lucky: When rolling a 1 on The D20 for an Attack roll, ability check, or saving throw, can reroll the die and must use the new roll
-        Brave: Has advantage on Saving Throws against being Frightened
-        Halfling Nimbleness: can move through the space of any creature that is of a size larger than her
-      Lightfoot Abilities:
-      - Naturally Stealthy: You can attempt to hide even when you are obscured only by a creature that is at least one size larger than you
-      Bard Abilities:
-      - Bard Spellcasting:
-        - Description: Spell DC 16
-          Cantrip: Mage Hand, Vicious Mockery, Minor Illusion, Dancing Lights
-          1st Level: Charm Person, Faerie Fire, Tasha's Hideous Laughter, Disguise Self
-          2nd Level: Enthrall, Heat Metal, Invisibility
-          3rd Level: Hypnotic Pattern, Tongues, Major Image
-          4th Level: Compulsion, Polymorph, Greater Invisibility
-          5th Level: Modify Memory, Legend Lore
-        Bardic Inspiration: Can use a Bonus Action on their Turn to choose one creature other than themself within 60 feet of, who can hear them. That creature gains one Bardic Inspiration die, a d6. Once within the next 
-                            10 minutes, the creature can roll the die and add the number rolled to one ability check, Attack roll, or saving throw it makes.
-        Jack of All Trades: can add half their Proficiency Bonus, rounded down, to any ability check they make that doesn't already include their Proficiency Bonus
-        Song of Rest: If they or any friendly creatures who can hear their Performance regain Hit Points by spending Hit Dice at the end of the Short Rest, each of those creatures regains an extra 1d6 Hit Points.
-        Font of Inspiration: they regain all of their expended uses of Bardic Inspiration when they finish a short or Long Rest
-        Countercharm: As an action, they can start a Performance that lasts until the end of their next turn. During that time, them and any friendly creatures within 30 feet of them have advantage on Saving Throws against
-                      being Frightened or Charmed
-        Expertise: gets double proficiency bonus in Performance and Persuasion
-        Magical Secrets: Can cast Magic Missle and Fireball
-      College of Lore Abilities:
-      - Cutting Words: you learn how to use your wit to distract, confuse, and otherwise sap the confidence and competence of others. When a creature that you can see within 60 feet of you makes an Attack roll, an ability
-                       check, or a damage roll, you can use your Reaction to expend one of your uses of Bardic Inspiration, rolling a Bardic Inspiration die and subtracting the number rolled from the creature’s roll. You can
-                       choose to use this feature after the creature makes its roll, but before the GM determines whether the Attack roll or ability check succeeds or fails, or before the creature deals its damage. The creature
-                       is immune if it can’t hear you or if it’s immune to being Charmed 
-        Additional Magic Secrets: Can cast Detect Thoughts and Dominate Person
+    - Mime
+    proficiencies:
+    - Stealth
+    - Insight
+    - Performance
+    - Persuasion
+  special-abilities:
+  - title: Halfling Abilities
+  - abilities: 
+    - title: Lucky
+    - content: When rolling a 1 on The D20 for an Attack roll, ability check, or saving throw, can reroll the die and must use the new roll           
+    - title: Brave
+    - content: Has advantage on Saving Throws against being Frightened 
+    - title: Halfling Nimbleness
+    - content: Can move through the space of any creature that is of a size larger than her
+  - title: Lightfoot Abilities
+  - abilities:
+    - title: Naturally Stealthy
+    - content: You can attempt to hide even when you are obscured only by a creature that is at least one size larger than you
+  - title: Bard Abilities
+  - abilities:
+  - title: Bard Spellcasting
+  - abilities:
+    - title: Spell DC
+    - content: 16 
+    - title: Cantrip
+    - content: Mage Hand, Vicious Mockery, Minor Illusion, Dancing Lights
+    - title: 1st Level
+    - content: Charm Person, Faerie Fire, Tasha's Hideous Laughter, Disguise Self
+    - title: 2nd Level
+    - content: Enthrall, Heat Metal, Invisibility
+    - title: 3rd Level
+    - content: Hypnotic Pattern, Tongues, Major Image
+    - title: 4th Level
+    - content: Compulsion, Polymorph, Greater Invisibility
+    - title: 5th Level
+    - content: Modify Memory, Legend Lore
+    - title: Bardic Inspiration
+    - content: Can use a Bonus Action on their Turn to choose one creature other than themself within 60 feet of, who can hear them. That creature gains one Bardic Inspiration die, a d6. Once within the next 
+               10 minutes, the creature can roll the die and add the number rolled to one ability check, Attack roll, or saving throw it makes.
+    - title: Jack of All Trades
+    - content: can add half their Proficiency Bonus, rounded down, to any ability check they make that doesn't already include their Proficiency Bonus
+    - title: Song of Rest
+    - content: If they or any friendly creatures who can hear their Performance regain Hit Points by spending Hit Dice at the end of the Short Rest, each of those creatures regains an extra 1d6 Hit Points.
+    - title: Font of Inspiration 
+    - content: they regain all of their expended uses of Bardic Inspiration when they finish a short or Long Rest
+    - title: Countercharm
+    - content: As an action, they can start a Performance that lasts until the end of their next turn. During that time, them and any friendly creatures within 30 feet of them have advantage on Saving Throws against 
+               being Frightened or Charmed
+    - title: Expertise
+    - content: gets double proficiency bonus in
+    - title: Magical Secrets
+    - content: Choose two Spells from any class, including this one. A spell you choose must be of a level you can cast, as shown on the Bard table, or a cantrip
+  - title: College of Mime Abilities
+  - abilities: 
+    - title: Copycat
+    - content: You become a dab hand with mimicry and costuming. You become proficient with the Disguise Kit, and you can copy the mannerisms or any person you have spent at least 1 hour observing. Additionally, when you see 
+               a creature complete a skill check. you can use your reaction 10 memorise their moves exactly. The next time you make a skill check using the same skill before the end of your next turn, you can replace your 
+               total result with the creature's total. Once you use this feature, you must finish a long rest you use it again.
+    - title: Magical Hoodwink
+    - content: Your thespian skill lets you convince, con, charm, and confuse your foes with ease. As a reaction when you see a creature within 60 feet of you make a successful Intelligence, Wisdom or Charisma saving
+               throw. you can expend two uses or your Bardic Inspiration at once. rolling both dice. You deal psychic damage to the target equal to the highest number rolled and you reduce the target's saving throw 
+               result by the lowest number rolled potentially causing the attempt to fail
+    - title: Mental Conjuration
+    - content: Your performance has become so perfect that when you simply pretend to interact with an object. you can make it real By gesturing as if a certain object exists over the course of 1 minute. you can 
+               create a nonliving object of vegetable matter within 5 feet of you (food rope. lumber. furniture. or similar). The object created must be no larger than a 5-foot cube. and the object must be of a 
+               form and material that you have seen before. An object created in this way is Invisible and vanishes after 1 minute or if you dismiss it as a bonus action. Uslng the object as a spell's material 
+               component causes that spell to fail You have a number or uses of this feature equal to your Charisma modifier, and you regain any expended uses when you finish a long rest.
+   
+  - title: Attacks
+  - content: 1 attack with Light Hammer
+  - title: Combat Tactics
+  - title: Although a performer, Eldaren is no newcomer to battle. He is quite crafty and will use his skills and/or magicks of persuasion to sway the battle in his favor after which time he can become quite ruthless.
 
-    special-abilities:
-    - Proficiencies: Insight, Performance, Persuasion   
-    attacks: |
-      1 attack with Light Hammer
-    combat-tactics: |
-      Although a performer, Eldaren is no newcomer to battle. He is quite crafty and will use his skills and/or magicks of persuasion to sway the battle in his favor after which time he can become quite ruthless.
-    special-equipment:
-    - Revelers Concertina: +2 bonus to the saving throw DC of his bard spells. As an action can use the concertina to cast Otto's irresistible dance from the item.
+  - title: Special Equipment
+  - abilities:
+    - title: Gloves of the Mime
+    - content: You gain the ability to summon the following invisible items once per day for as long as the wearer maintains concentration
+               The Box - a 5' x 5' box appears in an area of your choosing
+               The Wall - Can cast the Wall of Force spell at 5th Level
+               The Ladder - A 30' Ladder appears in an area of your choosing               
                                                                    
   profile:
 
