--- a/npcs/elenda_broadtoe.yaml
+++ b/npcs/elenda_broadtoe.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: middle-aged adult
+    age: Middle Aged Adult
 
     #
     # Races (case insensitive):
@@ -465,42 +465,77 @@ npc:
   # ???Max length???
   #
   specialties:
+    saving-throws:
+    - Charisma
+    - Wisdom
+    damage-immunities:
+    - N/A
+    condition-immunities:
+    - N/A
+    resistances:
+    - Frightened
     skills:
-    - Halfling Abilities:
-      - Lucky: When rolling a 1 on The D20 for an Attack roll, ability check, or saving throw, can reroll the die and must use the new roll
-        Brave: Has advantage on Saving Throws against being Frightened
-        Halfling Nimbleness: can move through the space of any creature that is of a size larger than her
-      Lightfoot Abilities:
-      - Naturally Stealthy: You can attempt to hide even when you are obscured only by a creature that is at least one size larger than you
-      Bard Abilities:
-      - Bard Spellcasting:
-        - Description: Spell DC 16
-          Cantrip: Mage Hand, Vicious Mockery, Minor Illusion, Dancing Lights
-          1st Level: Charm Person, Faerie Fire, Tasha's Hideous Laughter, Disguise Self 
-          2nd Level: Enthrall, Heat Metal, Invisibility
-          3rd Level: Hypnotic Pattern, Tongues, Major Image
-        Bardic Inspiration: Can use a Bonus Action on their Turn to choose one creature other than themself within 60 feet of, who can hear them. That creature gains one Bardic Inspiration die, a d6. Once within the next
-                            10 minutes, the creature can roll the die and add the number rolled to one ability check, Attack roll, or saving throw it makes.
-        Jack of All Trades: can add half their Proficiency Bonus, rounded down, to any ability check they make that doesn't already include their Proficiency Bonus
-        Song of Rest: If they or any friendly creatures who can hear their Performance regain Hit Points by spending Hit Dice at the end of the Short Rest, each of those creatures regains an extra 1d6 Hit Points.
-        Font of Inspiration: they regain all of their expended uses of Bardic Inspiration when they finish a short or Long Rest
-        Countercharm: As an action, they can start a Performance that lasts until the end of their next turn. During that time, them and any friendly creatures within 30 feet of them have advantage on Saving Throws against 
-                      being Frightened or Charmed
-      College of Eloquence Abilities:
-      - Silver Tongue: you are a master at saying the right thing at the right time. When you make a Charisma (Persuasion) or Charisma (Deception) check, you can treat a d20 roll of 9 or lower as a 10 
-        Unsettling Words: you can spin words laced with magic that unsettle a creature and cause it to doubt itself. As a bonus action, you can expend one use of your Bardic Inspiration and choose one creature you can see
-                          within 60 feet of you. Roll the Bardic Inspiration die. The creature must subtract the number rolled from the next saving throw it makes before the start of your next turn
-        Unfailing Inspiration: your inspiring words are so persuasive that others feel driven to succeed. When a creature adds one of your Bardic Inspiration dice to its ability check, attack roll, or saving throw and the roll
-                               fails, the creature can keep the Bardic Inspiration die
+    - N/A
+    proficiencies:
+    - Stealth
+    - Perception
+    - Deception
+    - Persuasion
+  special-abilities:
+  - title: Halfling Abilities
+  - abilities: 
+    - title: Lucky
+    - content: When rolling a 1 on The D20 for an Attack roll, ability check, or saving throw, can reroll the die and must use the new roll           
+    - title: Brave
+    - content: Has advantage on Saving Throws against being Frightened 
+    - title: Halfling Nimbleness
+    - content: Can move through the space of any creature that is of a size larger than her
+  - title: Lightfoot Abilities
+  - abilities:
+    - title: Naturally Stealthy
+    - content: You can attempt to hide even when you are obscured only by a creature that is at least one size larger than you
+  - title: Bard Abilities
+  - abilities:
+  - title: Bard Spellcasting
+  - abilities:
+    - title: Spell DC
+    - content: 16
+    - title: Cantrip
+    - content: Mage Hand, Vicious Mockery, Minor Illusion, Dancing Lights
+    - title: 1st Level
+    - content: Charm Person, Faerie Fire, Tasha's Hideous Laughter, Disguise Self 
+    - title: 2nd Level
+    - content: Enthrall, Heat Metal, Invisibility
+    - title: 3rd Level
+    - content: Hypnotic Pattern, Tongues, Major Image
+    - title: Bardic Inspiration
+    - content: Can use a Bonus Action on their Turn to choose one creature other than themself within 60 feet of, who can hear them. That creature gains one Bardic Inspiration die, a d6. Once within the next 
+               10 minutes, the creature can roll the die and add the number rolled to one ability check, Attack roll, or saving throw it makes.
+    - title: Jack of All Trades
+    - content: can add half their Proficiency Bonus, rounded down, to any ability check they make that doesn't already include their Proficiency Bonus
+    - title: Song of Rest
+    - content: If they or any friendly creatures who can hear their Performance regain Hit Points by spending Hit Dice at the end of the Short Rest, each of those creatures regains an extra 1d6 Hit Points.
+    - title: Font of Inspiration 
+    - content: they regain all of their expended uses of Bardic Inspiration when they finish a short or Long Rest
+    - title: Countercharm
+    - content: As an action, they can start a Performance that lasts until the end of their next turn. During that time, them and any friendly creatures within 30 feet of them have advantage on Saving Throws against 
+               being Frightened or Charmed
+  - title: College of Eloquence Abilities
+  - abilities: 
+    - title: Silver Tongue
+    - content: You are a master at saying the right thing at the right time. When you make a Charisma (Persuasion) or Charisma (Deception) check, you can treat a d20 roll of 9 or lower as a 10 
+    - title: Unsettling Words
+    - content: You can spin words laced with magic that unsettle a creature and cause it to doubt itself. As a bonus action, you can expend one use of your Bardic Inspiration and choose one creature you can see
+               within 60 feet of you. Roll the Bardic Inspiration die. The creature must subtract the number rolled from the next saving throw it makes before the start of your next turn
+    - title: Unfailing Inspiration
+    - content: Your inspiring words are so persuasive that others feel driven to succeed. When a creature adds one of your Bardic Inspiration dice to its ability check, attack roll, or saving throw and the roll
+               fails, the creature can keep the Bardic Inspiration die
 
-    special-abilities:
-    - Proficiencies: Persuasion, Deception, Insight
-    attacks: |
-      1 attack with short sword
-    combat-tactics: |
-      She's a lover not a fights and will try to charm away situations before they start
-    special-equipment:
-     - Short Sword
+  - title: Attacks
+  - content: 1 attack with short sword
+  - title: Combat Tactics
+  - content: She's a lover not a fights and will try to charm away situations before they start
+
 
   profile:
 
@@ -525,5 +560,6 @@ npc:
     # No length limit for now.
     #
     personality: |
-      Short and pretty with long brown hair tied in braided circle. Wearing a loose-fitting silk blouse and leather pants
+      Short and pretty with long brown hair tied in braided circle. Wearing a loose-fitting silk blouse and leather pants. Elenda is a gregarious sort, and loves a good smile and a laugh. She works hard to keep her
+      establisnment friendly and above all else, profitable.
   
